# feos-uvtheory

./: CHANGELOG.md  Cargo.toml  README.md  license-apache  test_uv_theory.ipynb
build_wheel/: Cargo.toml
build_wheel/src/: eos.rs  lib.rs
examples/: test_uv_theory.ipynb
src/: lib.rs  parameters.rs  python.rs
src/eos/: attractive_perturbation_bh.rs  attractive_perturbation_wca.rs  hard_sphere.rs  hard_sphere_bh.rs  hard_sphere_wca.rs  mod.rs  reference_perturbation.rs  reference_perturbation_bh.rs  reference_perturbation_wca.rs
src/python/: eos.rs  mod.rs  parameters.rs
