[package]
name = "feos_uvtheory"
version = "0.1.0"
authors = [
    "Anja Reimer <anja.reimer@itt.uni-stuttgart.de>",
    "Gernot Bauer <bauer@itt.uni-stuttgart.de>",
    "Philipp Rehner <prehner@ethz.ch>"
]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
quantity = "0.5"
feos-core = "0.2"
feos-dft = "0.2"
feos-uvtheory = { path = "..", features = ["python"] }
pyo3 = { version = "0.16", features = ["extension-module", "abi3", "abi3-py37"] }
numpy = "0.16"